--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "slug": "^0.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
